# parallel_programming_final

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  mpi.cpp  openmp.cpp  test.cpp
include/lib/: common.h  distributed.h  shared.h
scripts/: assignment.pbs  assignment.sh  plot-ai.py  plot-new.py  plot.py  plot3d.py  plot_opt.py  plot_speedup.py  run_benchmarks.sh
src/: CMakeLists.txt  common.cpp  distributed.cpp  shared.cpp  test.cpp
tests/: CMakeLists.txt  cpu_bench.cpp  cpu_tests.cpp  mpi_bench.cpp
